configuração de arquivos de kubernets e Dockerfile